@@ -44,6 +44,7 @@ PostGIS 2.1.0
            when count is zero
   - #1932, fix raster2pgsql of syntax for index tablespaces
   - #1939, remove custom data types: summarystats, histogram, quantile, valuecount
+  - #1951, remove crash on zero-length linestrings
 
 PostGIS 2.0.1
 2012/06/22
